# ggge_ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/templates/: manifest.yaml
config/: recognition.yaml
docs/: agent-architecture.md  architecture.md  archive.md  battle-phase-states.md  combat-formulas.md  device-control-research.md  handoff-next-session.md  roadmap.md  screen-map.md  stage-definition-requirements.md
scripts/: attribute_battle.py  capture.py  crop.py  curate_fixture.py  replay_frames.py  run_clear_loop.py  run_manual_battle.py  verify_match.py
secrets/: README.md  device.example.json  google_account.example.json
src/ggge_ai/: app.py
src/ggge_ai/actuation/: adb.py  base.py  (+1 more)
tests/: test_agent_loop.py  test_attribution.py  test_auto_guard.py  test_battle_actions.py  test_battle_advisor.py  test_battle_bridge.py  test_battle_formulas.py  test_battle_grid.py  test_battle_planner.py  test_battle_sim.py  test_battle_solver.py  test_battle_state.py  test_controller_middleware.py  test_controller_modal.py  test_controller_seek.py  test_defeat_screen.py  test_dialog_cursor.py  test_digits.py  test_executor.py  test_expectation.py  test_forecast_readers.py  test_goap.py  test_hidden_battle_warning.py  test_identity.py  test_keyguard_darkness.py  test_ledger.py  test_llm_reader.py  test_move_seek.py  test_not_actionable.py  test_objectives.py  test_observe.py  test_panels.py  test_pipeline.py  test_planner.py  test_reconcile.py  test_reconcile_wiring.py  test_roster.py  test_roster_calibration.py  test_scout_intel.py  test_serpentine_scan.py  (+16 more)
(+121 files in other folders)
